--- a/web/package.json
+++ b/web/package.json
@@ -6,19 +6,34 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "generate": "graphql-codegen --config codegen.yml"
   },
   "dependencies": {
-    "@auth0/nextjs-auth0": "^1.9.1",
+    "@apollo/client": "^3.5.10",
+    "@auth0/nextjs-auth0": "^1.7.0",
+    "@headlessui/react": "^1.5.0",
+    "@heroicons/react": "^1.0.6",
+    "graphql": "15",
     "next": "12.3.1",
+    "next-http-proxy-middleware": "^1.2.4",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
   "devDependencies": {
+    "@graphql-codegen/cli": "^2.6.2",
+    "@graphql-codegen/import-types-preset": "^2.1.15",
+    "@graphql-codegen/typescript": "^2.4.8",
+    "@graphql-codegen/typescript-operations": "^2.3.5",
+    "@graphql-codegen/typescript-react-apollo": "^3.2.11",
     "@types/node": "^18.7.19",
     "@types/react": "^18.0.21",
+    "autoprefixer": "^10.4.12",
     "eslint": "8.24.0",
     "eslint-config-next": "12.3.1",
+    "graphql-codegen-apollo-next-ssr": "^1.7.1",
+    "postcss": "^8.4.16",
+    "tailwindcss": "^3.1.8",
     "typescript": "^4.8.3"
   }
 }
