--- a/web/package.json
+++ b/web/package.json
@@ -14,6 +14,8 @@
     "@auth0/nextjs-auth0": "^1.7.0",
     "@headlessui/react": "^1.5.0",
     "@heroicons/react": "^1.0.6",
+    "@headlessui/react": "^1.5.0",
+    "@heroicons/react": "^1.0.6",
     "graphql": "15",
     "next": "12.3.1",
     "next-http-proxy-middleware": "^1.2.4",
@@ -24,6 +26,8 @@
     "@graphql-codegen/cli": "^2.6.2",
     "@graphql-codegen/import-types-preset": "^2.1.15",
     "@graphql-codegen/typescript": "^2.4.8",
+    "@tailwindcss/aspect-ratio": "^0.4.0",
+    "@tailwindcss/forms": "^0.5.0",
     "@graphql-codegen/typescript-operations": "^2.3.5",
     "@graphql-codegen/typescript-react-apollo": "^3.2.11",
     "@types/node": "^18.7.19",
