--- a/web/.env.example
+++ b/web/.env.example
@@ -1,7 +1,9 @@
-AUTH0_SECRET=
-AUTH0_CLIENT_ID=
-AUTH0_CLIENT_SECRET=
 
-AUTH0_BASE_URL=
+
+
+AUTH0_SECRET='use [openssl rand -hex 32] to generate a 32 bytes value'
+AUTH0_BASE_URL='http://localhost:3000'
+AUTH0_ISSUER_BASE_URL='https://YOUR_DOMAIN'
+AUTH0_CLIENT_ID='YOUR_CLIENT_ID'
+AUTH0_CLIENT_SECRET='YOUR_CLIENT_SECRET'
 AUTH0_AUDIENCE=
-AUTH0_ISSUER_BASE_URL=
